apps/cilium-network-policies/allow-to-lldap.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-to-lldap
  namespace: authelia
spec:
  endpointSelector:
    matchLabels:
      "k8s:app.kubernetes.io/name": lldap
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": authelia
        "k8s:app.kubernetes.io/name": authelia
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": media
        "k8s:app.kubernetes.io/name": emby
    toPorts:
    - ports:
      - port: "3890"
        protocol: TCP
