apps/cilium-network-policies/allow-to-redis.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-to-redis
  namespace: databases
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": authelia
        "k8s:app.kubernetes.io/name": authelia
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": paper
        "k8s:app.kubernetes.io/name": paperless
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
